--- a/index.html
+++ b/index.html
@@ -12,3 +12,10 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style>
+html,body {
+  margin:0; 
+  padding:0;
+}
+</style>
